# PazuEngine

./: LICENSE  LICENSE.md
GameWithPazuEngine-Current/projects/: CMakeLists.txt
GameWithPazuEngine-Current/projects/PazuEngine/: CMakeLists.txt
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/: DisplayMode.cpp  DisplayMode.h  File.inl  Stream.inl  VideoMode.cpp  VideoMode.h  Window.cpp  Window.h  WindowFlag.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Asset/: AssetManager.inl  IAsset.h  ShaderAsset.cpp  ShaderAsset.h  TextureAsset.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Asset/Loader/: ModelAssetLoader.inl  ShaderAssetLoader.h  StaticModelAssetLoader.h  TextureAssetLoader.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Component/: IComponent.cpp
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Component/Camera/: Camera2DComponent.cpp  Camera3DComponent.cpp  CameraComponent.cpp  CameraComponent.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Component/Model/: AnimatedModelComponent.cpp  AnimatedModelComponent.h  ModelComponent.h  ModelComponent.inl  StaticModelComponent.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Container/: Container.h  Vector.inl
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Event/: EventManager.h  EventManager.inl  IEventData.h  IUpdatableEvent.h  KeyboardEventData.cpp  KeyboardEventData.h  MouseEvent.cpp  MouseEvent.h  MouseEventData.h  NoneEvent.cpp  NoneEvent.h  NoneEventData.h  SystemEvent.cpp  SystemEvent.h  SystemEventData.h  WindowEventData.cpp
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/: ClearFlag.h  Context.inl  Device.cpp  Device.h  DrawMode.h  IDeviceHandle.h  IObjectHandle.cpp
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/BlendState/: BlendState.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/Buffer/: Buffer.h  ConstantBuffer.h  ConstantBuffer.inl  IndexBuffer.h  VertexBuffer.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/InputLayout/: InputLayoutElement.inl  VertexInput.h  VertexInputLayout.cpp
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/SamplerState/: SamplerState.cpp  SamplerState.h  TextureFilter.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/Shader/: PixelShader.h  Shader.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/Texture/: Texture.inl
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Graphics/Vertex/: VertexPosition.h  VertexPosition.inl  VertexPositionColor.h  VertexPositionColor.inl  VertexPositionColorTexture.h  VertexPositionColorTexture.inl  VertexPositionNormalColor.h  VertexPositionNormalColorTexture.h  VertexPositionNormalColorTextureSkinning.h  VertexPositionNormalTexture.h  VertexPositionNormalTexture.inl
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Math/: Color.h  Color.inl  Mathf.h  Matrix.inl  Plane.cpp  Plane.inl  Point.inl  Rectangle.h  Rectangle.inl  Size.h  Vector2.cpp  Vector2.inl  Vector4.h  Vector4.inl
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/System/: CameraSystem.cpp  CameraSystem.inl  IDrawableSystem.h  IResizableSystem.h  ISystem.h  IUpdatableSystem.h  RendererSystem.h  RendererSystem.inl  SystemManager.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Tools/: InfoTitleVersion.h  PathStep.cpp  ToInitializerList.inl  UniqueComPtr.h
GameWithPazuEngine-Current/projects/PazuEngine/Pazu/Tools/INons/: INonCreatable.cpp  INonMovable.cpp  INonMovable.h
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Graphics/Vertex/: IVertex.h  VertexColor.inl  VertexFlag.h  VertexNormal.inl  VertexPosition.h  VertexPositionColorTexture.inl  VertexPositionNormal.h  VertexPositionNormal.inl  VertexPositionNormalTexture.h  VertexPositionTexture.h  VertexSkinning.h  VertexTexture.inl
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Graphics/Vertex-2/: VertexPositionColor.h  VertexPositionColorTexture.inl  VertexPositionNormal.h  VertexPositionNormal.inl  VertexPositionNormalColor.h  VertexPositionNormalColor.inl  VertexPositionNormalColorTexture.h  VertexPositionNormalColorTexture.inl  VertexPositionNormalTexture.inl
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Graphics/Vertex-3/: IVertex.h  VertexBlendIndices.inl  VertexBlendWeights.h  VertexSet.cpp  VertexSet.h
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Graphics/Vertex-4/: VertexPosition.inl  VertexPositionColor.h  VertexPositionColor.inl  VertexPositionColorTexture.h  VertexPositionColorTexture.inl  VertexPositionNormal.h  VertexPositionNormal.inl  VertexPositionNormalColor.h  VertexPositionNormalColor.inl  VertexPositionTexture.inl
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Math(WithNamespaces)/: Color.h  Color.inl  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Point.cpp  Quaternion.h  Ray.cpp  Rectangle.cpp  Rectangle.h  Vector3.inl  Viewport.cpp  Viewport.h  Viewport.inl
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Math/Transform/: TransformBase.cpp  TransformBase.h  TransformPosition.cpp  TransformPosition.h  TransformScale.cpp
GameWithPazuEngine-Current/projects/PazuEngine/Temp/Tools/: ProtectedPtr.inl
GameWithPazuEngine-Current/projects/SpatyomGame/: CMakeLists.txt
GameWithPazuEngine-Current/projects/SpatyomGame/Assets/: CMakeLists.txt
GameWithPazuEngine-Current/projects/SpatyomGame/Assets/Models/Characters/: Dude.fbx  Dude.material  DudeSkinned.fbx
GameWithPazuEngine-Current/projects/SpatyomGame/Assets/Models/Environment/: FlyingRock.fbx  FlyingRock.mtl
GameWithPazuEngine-Current/projects/SpatyomGame/Assets/Shaders/Model/: default.shader
GameWithPazuEngine-Current/projects/SpatyomGame/Assets/Sprites/Armors/: Ribbon.DDS
GameWithPazuEngine-Current/projects/SpatyomGame/Assets/Sprites/Characters/: Character.DDS  Hand.DDS  (+3 more)
GameWithPazuEngine-Current/projects/SpatyomGame/Spatyom/: MyMouseEvent.h  MyWindowEvent.h
Workspace/projects/Sample/: CMakeLists.txt
Workspace/projects/Sample/Assets/: CMakeLists.txt
Workspace/projects/Sample/Game/: Main.cpp  MyMouseEvent.cpp  MyMouseEvent.h  MyWindowEvent.cpp
(+622 files in other folders)
